# dawn-node

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  go.mod  go.sum  package-lock.json  package.json  test.js
src/: bindings.js  browser.idl  core_interop.cc  core_interop.h  webgpu.cc  webgpu.idl  webgpu_bindings.cc  webgpu_interop.cc.tmpl  webgpu_interop.h.tmpl  webgpu_interop_common.tmpl
src/bindings/: async_runner.cc  async_runner.h  convert.cc  convert.h  errors.cc  errors.h  gpu.cc  gpu.h  gpuadapter.cc  gpuadapter.h  gpubindgroup.cc  gpubindgroup.h  gpubindgrouplayout.cc  gpubindgrouplayout.h  gpubuffer.cc  gpubuffer.h  gpucommandbuffer.cc  gpucommandbuffer.h  gpucommandencoder.cc  gpucommandencoder.h  gpucomputepassencoder.cc  gpucomputepassencoder.h  gpucomputepipeline.cc  gpucomputepipeline.h  gpudevice.cc  gpudevice.h  gpupipelinelayout.cc  gpupipelinelayout.h  gpuqueryset.cc  gpuqueryset.h  gpuqueue.cc  gpuqueue.h  gpurenderbundle.cc  gpurenderbundle.h  gpurenderbundleencoder.cc  gpurenderbundleencoder.h  gpurenderpassencoder.cc  gpurenderpassencoder.h  gpurenderpipeline.cc  gpurenderpipeline.h  (+10 more)
src/interop/: core.cc  core.h  webgpu.cc.tmpl  webgpu.h.tmpl
src/utils/: debug.h
test/: test_binding.js
tools/cmd/idl2cpp/: main.go
tools/cmd/idlgen/: main.go
tools/gpuweb_cts_runner/: all_tests.txt  gpuweb_cts_runner.py  run-dawn-node.js  single_test.txt  tests_darwin_fail.txt  tests_darwin_pass.txt  tests_darwin_skip.txt  tests_darwin_unknown.txt  tests_fail.txt  tests_linux_pass.txt  tests_linux_timeout.txt  tests_pass.txt  tests_skip.txt  tests_unknown.txt  tests_windows_fail.txt  tests_windows_pass.txt  tests_windows_skip.txt  tests_windows_timeout.txt  tests_windows_unknown.txt
